<resources>
    <string name="app_name">Buscar Endereço</string>>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cpf_label">Digite o CEP</string>
    <string name="cpf_hint">CPF</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="entereco_titulo">Resultado do CEP:</string>
    <string name="cep">CEP</string>
    <string name="logradouro">Logradouro</string>
    <string name="complemento">Complemento</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="uf">UF</string>
    <string name="ibge">Ibge</string>
    <string name="gia">GIA</string>
    <string name="ddd">DDD</string>
    <string name="siafi">Siafi</string>
    <string name="outrosDadosLabel">Dados Ocultos</string>
    <string name="enderecoButton">Voltar</string>
    <string name="erro_label">CEP não encontrado!</string>
</resources>