<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.buscarendereo.cpfform.CpfFormViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/formLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.buscarendereo.MainActivity">

        <TextView
            android:id="@+id/cpfLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="64dp"
            android:text="@string/cpf_label"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.vicmikhailau.maskededittext.MaskedEditText
            android:id="@+id/cpfCampo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="112dp"
            android:layout_marginTop="52dp"
            android:ems="10"
            android:hint="@string/cpf_hint"
            android:inputType="number"
            android:minHeight="48dp"
            app:mask="#####-###"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cpfLabel"
            />

        <Button
            android:id="@+id/pesquisarbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="148dp"
            android:layout_marginTop="64dp"
            android:background="#033EA5"
            android:hapticFeedbackEnabled="false"
            android:text="@string/pesquisar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cpfCampo" />

        <TextView
            android:id="@+id/erroLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/erro_label"
            android:textColor="#E30F0F"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.437"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cpfLabel" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>