<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.buscarendereo.enderecofragment.EnderecoViewModel" />
    </data>

    <ScrollView
        android:id="@+id/enderecoLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".enderecofragment.EnderecoFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/enderecoTitle"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="92dp"
                android:layout_marginTop="16dp"
                android:text="@string/entereco_titulo"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/cepResultado"
                android:layout_width="141dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/campo_ea_parede"
                android:ems="10"
                android:inputType="textPersonName"
                android:focusable="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enderecoCepLabel" />

            <TextView
                android:id="@+id/enderecoCepLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="8dp"
                android:text="@string/cep"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enderecoTitle" />

            <TextView
                android:id="@+id/logradouro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="@dimen/entre_um_campo_e_outro"
                android:text="@string/logradouro"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cepResultado" />

            <EditText
                android:id="@+id/logradouroCampo"
                android:layout_width="349dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/campo_ea_parede"
                android:ems="10"
                android:inputType="text"
                android:focusable="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logradouro" />

            <TextView
                android:id="@+id/complementoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/campo_ea_parede"
                android:layout_marginTop="@dimen/entre_um_campo_e_outro"
                android:text="@string/complemento"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logradouroCampo" />

            <EditText
                android:id="@+id/complementoCampo"
                android:layout_width="271dp"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/campo_ea_parede"
                android:ems="10"
                android:inputType="textPersonName"
                android:focusable="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/complementoLabel" />

            <TextView
                android:id="@+id/bairroLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/campo_ea_parede"
                android:layout_marginTop="@dimen/entre_um_campo_e_outro"
                android:text="@string/bairro"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/complementoCampo" />

            <EditText
                android:id="@+id/bairroCampo"
                android:layout_width="146dp"
                android:layout_height="47dp"
                android:layout_marginStart="@dimen/campo_ea_parede"
                android:ems="10"
                android:inputType="textPersonName"
                android:focusable="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bairroLabel" />

            <TextView
                android:id="@+id/cidadeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="192dp"
                android:layout_marginTop="@dimen/entre_um_campo_e_outro"
                android:text="@string/cidade"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/complementoCampo" />

            <EditText
                android:id="@+id/cidadeCampo"
                android:layout_width="159dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="192dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:focusable="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cidadeLabel" />

            <TextView
                android:id="@+id/ufLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/campo_ea_parede"
                android:layout_marginTop="@dimen/entre_um_campo_e_outro"
                android:text="@string/uf"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cidadeCampo" />

            <EditText
                android:id="@+id/ufCampo"
                android:layout_width="58dp"
                android:layout_height="45dp"
                android:layout_marginStart="@dimen/campo_ea_parede"
                android:ems="10"
                android:inputType="textPersonName"
                android:focusable="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ufLabel" />

            <TextView
                android:id="@+id/ibgeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/campo_ea_parede"
                android:layout_marginTop="@dimen/entre_um_campo_e_outro"
                android:text="@string/ibge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/outrosDadosLabel" />

            <EditText
                android:id="@+id/ibgeCampo"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/campo_ea_parede"
                android:ems="10"
                android:inputType="textPersonName"
                android:focusable="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ibgeLabel" />

            <TextView
                android:id="@+id/giaLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="192dp"
                android:layout_marginTop="@dimen/entre_um_campo_e_outro"
                android:text="@string/gia"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/outrosDadosLabel" />

            <EditText
                android:id="@+id/giaCampo"
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="192dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:focusable="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/giaLabel" />

            <TextView
                android:id="@+id/dddLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/campo_ea_parede"
                android:layout_marginTop="@dimen/entre_um_campo_e_outro"
                android:text="@string/ddd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ibgeCampo" />

            <EditText
                android:id="@+id/dddCampo"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/campo_ea_parede"
                android:ems="10"
                android:inputType="textPersonName"
                android:focusable="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dddLabel" />

            <TextView
                android:id="@+id/siafiLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="192dp"
                android:layout_marginTop="@dimen/entre_um_campo_e_outro"
                android:text="@string/siafi"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/giaCampo" />

            <EditText
                android:id="@+id/siafiCampo"
                android:layout_width="76dp"
                android:layout_height="40dp"
                android:layout_marginStart="192dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:focusable="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/siafiLabel" />

            <TextView
                android:id="@+id/outrosDadosLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="147dp"
                android:layout_marginTop="@dimen/entre_um_campo_e_outro"
                android:text="@string/outrosDadosLabel"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ufCampo" />

            <Button
                android:id="@+id/voltarButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="144dp"
                android:layout_marginTop="16dp"
                android:text="@string/enderecoButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dddCampo" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>